--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tier 1 Week 3 Assignment</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <script src="scripts/part-supply.js" charset="utf-8"></script>
-  </head>
-  <body>
-    <header>
-      <h1>Week 3 assignment</h1>
-      <h2>Check the console...</h2>
-    </header>
-    <!-- create an ordered list with any questions you have on this week's material -->
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Tier 1 Week 3 Assignment</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <script src="scripts/part-supply.js" charset="utf-8"></script>
+</head>
+
+<body>
+  <header>
+    <h1>Week 3 assignment</h1>
+    <h2>Check the console...</h2>
+  </header>
+  <!-- create an ordered list with any questions you have on this week's material -->
+  <ol>
+    <li>Should we be actively trying to memorize the things we are learning in class? So far I have been referring to my
+      notes when coding.</li>
+    <li>How often do you use the for of loop?</li>
+  </ol>
+</body>
+
 </html>
